helm-demo/traefik/game2048.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-2048
  namespace: poc
  labels:
    app: game-2048
spec:
  replicas: 2
  selector:
    matchLabels:
      app: game-2048
  template:
    metadata:
      labels:
        app: game-2048
    spec:
      containers:
        - image: alexwhen/docker-2048 # 2048 image
          name: game-2048
          ports:
            - name: web
              containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  namespace: poc
  name: game-2048
spec:
  selector:
    app: game-2048
  ports:
    - port: 80
      targetPort: web

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: poc  
  name: game-2048
spec:
  entryPoints: # We listen to requests coming from ports 80 and 443
    - web
    - websecure
  routes:
    - match: Host(`2048.padok.fr`)
      kind: Rule
      services:
        - name: game-2048 # Requests will be forwarded to this service
          port: 80
